# surface_extraction

./: .gitignore  CMakeBuildFlags.cmake  CMakeLists.txt  README.md  README.txt
build_surface/: CMakeLists.txt  CMakeLists_BACKUP_4293.txt  CMakeLists_REMOTE_4293.txt  package.xml
build_surface/include/build_surface/: BuildSurface.h  cgal_types.hpp  cgal_utils.hpp
build_surface/src/build_surface/: BuildSurface.cpp
collect_points/: CMakeLists.txt  package.xml
collect_points/include/collect_points/: CollectPoints.h
collect_points/src/collect_points/: CollectPoints.cpp
detect_surfaces/: CMakeLists.txt  package.xml
detect_surfaces/include/detect_surfaces/: DetectSurfaces.h
detect_surfaces/src/detect_surfaces/: DetectSurfaces.cpp
expand_surfaces/: CMakeLists.txt  package.xml
expand_surfaces/include/expand_surfaces/: ExpandSurfaces.h  ExpandSurfaces.hpp
expand_surfaces/src/expand_surfaces/: ExpandSurfaces.cpp
surface_detection/: CMakeLists.txt  custom_rosconsole.conf  package.xml
surface_detection/include/surface_detection/: ProgressListener.hpp  SurfaceDetection.h
surface_detection/launch/: surface_detection.launch
surface_detection/src/: SurfaceDetection.cpp  surface_detection_node.cpp
surface_extraction/: CMakeLists.txt  custom_rosconsole.conf  package.xml  params.yaml
surface_extraction/launch/: extract_surfaces_full.launch  extract_surfaces_partial.launch  gazebo_cloud.launch  sample_cloud_static.launch  sample_cloud_timed.launch  surface_extraction.launch
surface_extraction/scripts/: emit_current_time.py  track_performance.py
surface_extraction_launch/: CMakeLists.txt  custom_rosconsole.conf  package.xml  params.yaml
surface_extraction_launch/launch/: extract_surfaces_full.launch  extract_surfaces_partial.launch  gazebo_cloud.launch  sample_cloud_static.launch  sample_cloud_timed.launch  surface_extraction.launch  surface_extraction_incremental.launch
surface_extraction_launch/scripts/: animate_tf.py  emit_current_time.py
surface_filters/: CMakeLists.txt  nodelets.xml  package.xml
surface_filters/cfg/: BuildSurface.cfg  ChangeDetection.cfg  ConcaveHull.cfg  MLS.cfg  RGS.cfg  SAC.cfg  SamplePatches.cfg
surface_filters/include/surface_filters/: BuildSurface.h  ChangeDetection.h  ConcaveHull.h  ConcurrentPointGrouper.h  ExpandSurfaces.h  FilterSurfaceInliers.h  FreePointAccumulation.h  MovingLeastSquares.h  RegionGrowingSegmentation.h  SACSegmentAndFit.h  SamplePatches.h  Throttle.h  Triangulate.h
surface_filters/include/surfaces/: PointClusters.hpp  PointClusters_Serialization.h  PointClusters_Serialization.hpp  PointIndices_Serialization.h  Polygons.hpp  Polygons_Serialization.h  Polygons_Serialization.hpp  Vertices_Serialization.h
surface_filters/src/surface_filters/: BuildSurface.cpp  ChangeDetection.cpp  ConcaveHull.cpp  ExpandSurfaces.cpp  FreePointAccumulation.cpp  MovingLeastSquares.cpp  PeriodicSnapshotter.cpp  RegionGrowingSegmentation.cpp  SACSegmentAndFit.cpp  SamplePatches.cpp  Triangulate.cpp
surface_manager/: CMakeLists.txt  nodelets.xml  package.xml
surface_manager/cfg/: SurfaceManager.cfg
surface_manager/include/surface_manager/: IncrementalSurfaceManager.h  SurfaceManager.h
surface_manager/src/surface_manager/: IncrementalSurfaceManager.cpp  SurfaceManager.cpp
surface_msgs/: CMakeLists.txt  package.xml
surface_msgs/msg/: DiscSurfacePatch.msg  DiscSurfacePatches.msg  PointClusters.msg  Polygon.msg  Polygons.msg  Segment.msg  Surface.msg  SurfaceCloud.msg  SurfaceClouds.msg  SurfaceMesh.msg  SurfaceMeshStamped.msg  SurfaceMeshes.msg  SurfaceStamped.msg  Surfaces.msg
surface_msgs/srv/: SurfaceDetection.srv
surface_msgs2/: CMakeLists.txt  package.xml
surface_msgs2/msg/: Surface.msg  SurfaceMesh.msg  SurfaceMeshStamped.msg  SurfaceMeshes.msg  SurfaceStamped.msg  Surfaces.msg
surface_msgs2/srv/: SurfaceDetection.srv
surface_types/: CMakeLists.txt  package.xml
surface_types/include/surface_types/: Surface.hpp  SurfaceData.hpp  SurfaceMesh.hpp  SurfaceMeshStamped.hpp  SurfaceMeshes.hpp  SurfaceStamped.hpp  Surfaces.hpp
surface_utils/: CMakeLists.txt  package.xml
surface_utils/include/surface_utils/: ProgressListener.hpp  SurfaceVisualizationController.hpp  color_generator.hpp  conversions.hpp  eigen_helpers_conversions.hpp  geom_utils.hpp  multi_future.hpp  pcl_utils.hpp  smart_ptr.hpp
surfaces/: CMakeLists.txt  package.xml
surfaces/include/surfaces/: PointClusters.hpp  Polygons.hpp  Segment.hpp  Surface.hpp  SurfaceMesh.hpp  SurfaceMeshStamped.hpp  SurfaceMeshes.hpp  (+6 more)
(+2 files in other folders)
